--- a/HumaneSociety/Content/Site.css
+++ b/HumaneSociety/Content/Site.css
@@ -1,6 +1,10 @@
 ﻿body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color:cornflowerblue;
+}
+.navbar {
+    background-color:darkcyan;
 }
 
 /* Set padding to keep content from hitting the edges */
